kompose/ts-ui-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ui-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ts-ui-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ts-ui-proxy
    spec:
      containers:
        - image: devpatterns/ts-ui-proxy:dev
          imagePullPolicy: Always
          name: ts-ui-proxy
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
      restartPolicy: Always
