kompose/ts_ui_proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-ui-proxy
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ts-ui-proxy
  type: ClusterIP
