kompose/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ts-ui.local        # add this to your Windows hosts file
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ts-ui-proxy
                port:
                  number: 80
